# MiniVecDB

./: .bazelrc  .clang-format  .gitignore  README.md  WORKSPACE
.github/workflows/: bazel.yml
docs/: benchmark.md  design.md
docs/todo/: day1.md  day2.md  day3.md  day4.md  day5.md
src/: BUILD.bazel  main.cpp
src/index/: BUILD.bazel  flat_index.cpp  flat_index.h  graph_index.cpp  graph_index.h  hnsw_index.cpp  hnsw_index.h  iindex.h
src/metric/: BUILD.bazel  distance.cpp  distance.h
src/storage/: BUILD.bazel  serializer.cpp  serializer.h  vector_store.cpp  vector_store.h
src/utils/: BUILD.bazel  logging.h  timer.h
tests/: BUILD.bazel  test_distance.cpp  test_flat_index.cpp  test_graph_index.cpp  test_hnsw_index.cpp  test_serializer.cpp  test_vector_store.cpp
tools/: BUILD.bazel  gen_dataset.cpp  run_benchmark.cpp  run_benchmark_graph.cpp  run_benchmark_hnsw.cpp
