cc_test(
    name = "test_distance",
    srcs = ["test_distance.cpp"],
    deps = [
        "//src/metric:distance",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
cc_test(
    name = "test_vector_store",
    srcs = ["test_vector_store.cpp"],
    deps = [
        "//src/storage:vector_store",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
cc_test(
    name = "test_flat_index",
    srcs = ["test_flat_index.cpp"],
    deps = [
        "//src/storage:vector_store",
        "//src/index:iindex",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
