cc_binary(
    name = "gen_dataset",
    srcs = ["gen_dataset.cpp"],
    deps = [
        "//src/storage:serializer",
    ],
    visibility = ["//visibility:public"],
)
cc_binary(
    name = "run_benchmark_flat",
    srcs = ["run_benchmark_flat.cpp"],
    deps = [
        "//src/storage:serializer",
        "//src/storage:vector_store",
        "//src/index:iindex",
        "//src/utils:utils",
    ],
)
cc_binary(
    name = "run_benchmark_graph",
    srcs = ["run_benchmark_graph.cpp"],
    deps = [
        "//src/storage:serializer",
        "//src/storage:vector_store",
        "//src/index:iindex",
        "//src/utils:utils",
    ],
)