cc_library(
    name = "vector_store",
    hdrs = ["vector_store.h"],
    srcs = ["vector_store.cpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "serializer",
    hdrs = ["serializer.h"],
    srcs = ["serializer.cpp"],
    deps = [
        "//src/storage:vector_store",
    ],
    visibility = ["//visibility:public"],
)
